[package]
name = "baseless"
version = "0.0.0"
authors = ["Max Bond <max.o.bond@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Arbitrary precision, arbitrary base floating-point integers"
repository = "https://github.com/MaxBondABE/baseless"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "^0.10.1"
